--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "pinus-aoi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/lib/aoiService",
+  "types": "./lib/aoiService",
+  "files": [
+    "dist",
+    "lib"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
